--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "ggmosaic"]
+	path = ggmosaic
+	url = https://github.com/haleyjeppson/ggmosaic
+	shallow = true
+	registered = true
